force-app/main/default/objects/Appraisal/Appraisal.object-meta.xml
<CustomObject>
    <sharingModel>Private</sharingModel>
</CustomObject>