force-app/main/default/objects/Appraisal/fields/AF_ApprovalReference__c.field-meta.xml
<CustomField>
    <fullName>AF_ApprovalReference__c</fullName>
    <label>Approval Reference</label>
    <length>100</length>
    <type>Text</type>
</CustomField>