force-app/main/default/objects/Appraisal/fields/AF_Contact__c.field-meta.xml
<CustomField>
    <fullName>AF_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Appraisals</relationshipLabel>
    <relationshipName>AF_Appraisals</relationshipName>
    <type>Lookup</type>
</CustomField>