force-app/main/default/objects/Appraisal/fields/AF_FinalRemarks__c.field-meta.xml
<CustomField>
    <fullName>AF_FinalRemarks__c</fullName>
    <label>Final Remarks</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>