force-app/main/default/objects/Appraisal/fields/AF_InitiatingSalesRep__c.field-meta.xml
<CustomField>
    <fullName>AF_InitiatingSalesRep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Sales Rep who initiated this trade-in request (ALF-RS-04 FR11). Captured separately from Owner because Owner is reassigned to the AF_Q_UsedCarTeam queue while the evaluation is in progress, then reassigned back once approved/rejected.</description>
    <label>Initiating Sales Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Initiated Trade-Ins</relationshipLabel>
    <relationshipName>AF_InitiatedTradeIns</relationshipName>
    <type>Lookup</type>
</CustomField>