force-app/main/default/objects/Appraisal/fields/AF_RelatedQuoteLine__c.field-meta.xml
<CustomField>
    <fullName>AF_RelatedQuoteLine__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Pairs with QuoteLineItem.AF_RelatedTradeIn__c — negative trade-in deduction line.</description>
    <label>Related Quote Line</label>
    <referenceTo>QuoteLineItem</referenceTo>
    <relationshipLabel>Appraisals</relationshipLabel>
    <relationshipName>AF_Appraisals</relationshipName>
    <type>Lookup</type>
</CustomField>