force-app/main/default/objects/Appraisal/fields/AF_RelatedVehicleReservation__c.field-meta.xml
<CustomField>
    <fullName>AF_RelatedVehicleReservation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Trade-in value used as deposit, same Opportunity.</description>
    <label>Related Vehicle Reservation</label>
    <referenceTo>AF_VehicleReservation__c</referenceTo>
    <relationshipLabel>Appraisals</relationshipLabel>
    <relationshipName>AF_Appraisals</relationshipName>
    <type>Lookup</type>
</CustomField>