force-app/main/default/objects/Appraisal/fields/AF_TradeInOutcome__c.field-meta.xml
<CustomField>
    <fullName>AF_TradeInOutcome__c</fullName>
    <description>Rep-recorded outcome.</description>
    <label>Trade-In Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>