force-app/main/default/objects/Appraisal/listViews/AF_Q_UsedCarTeam_Appraisal.listView-meta.xml
<ListView>
    <fullName>AF_Q_UsedCarTeam_Appraisal</fullName>
    <filterScope>Queue</filterScope>
    <label>AF Used Car Team</label>
    <queue>AF_Q_UsedCarTeam</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>